--- a/frontends/gomeeki-app/bower.json
+++ b/frontends/gomeeki-app/bower.json
@@ -17,7 +17,9 @@
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "ngmap": "^1.17.8",
-    "bootstrap-dropdown": "*"
+    "bootstrap-dropdown": "*",
+    "lodash": "^4.17.2",
+    "angular-google-maps": "^2.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
