--- a/frontends/gomeeki-app/bower.json
+++ b/frontends/gomeeki-app/bower.json
@@ -19,7 +19,8 @@
     "ngmap": "^1.17.8",
     "bootstrap-dropdown": "*",
     "lodash": "^4.17.2",
-    "angular-google-maps": "^2.4.0"
+    "angular-google-maps": "^2.4.0",
+    "angular-simple-logger": "^0.1.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
